Bug 318176 - KDE 4.10.2/OwnCloud 5.0.3 constant akonadi_groupware crash
Summary: KDE 4.10.2/OwnCloud 5.0.3 constant akonadi_groupware crash
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.10
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 319056 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-11 07:34 UTC by Simon Andersch
Modified: 2013-06-01 16:13 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.00 KB, text/plain)
2013-04-12 11:21 UTC, Simon Andersch
Details
New crash information added by DrKonqi (4.25 KB, text/plain)
2013-06-01 16:13 UTC, Jessie A. Morris
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Andersch 2013-04-11 07:34:20 UTC
Application: akonadi_davgroupware_resource (4.10)
KDE Platform Version: 4.10.2
Qt Version: 4.8.3
Operating System: Linux 3.7.0-7-generic x86_64
Distribution: Ubuntu 12.10

-- Information about the crash:
- Custom settings of the application:

I'm using my own OC 5 caldav and on the desktop Ubuntu 12.10 with KDE PPA so that I have always the newest builds (current 4.10.2). Yesterday out of nothing Akonadi/Kontact stopped working correctly so that akonadi_groupware crashes. KMail is running quite well.
Sorry for just some words but I really have no clue about where to start to help you guys.

Thanks in advance
siyman

The crash can be reproduced every time.

-- Backtrace:
Application: ownCloud vom Typ DAV-Groupware-Ressource (akonadi_davgroupware_resource), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  0x0000000000442df4 in DavGroupwareResource::retrieveItem (this=0x1aad070, item=...) at ../../../../resources/dav/resource/davgroupwareresource.cpp:315
#7  0x00007ff6cf6c4f45 in Akonadi::ResourceBasePrivate::slotPrepareItemRetrievalResult (this=0x1a9d5e0, job=<optimized out>) at ../../akonadi/resourcebase.cpp:783
#8  0x00007ff6cf6c537a in Akonadi::ResourceBase::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./moc_resourcebase.cpp:141
#9  0x00007ff6d0facf8f in QMetaObject::activate (sender=0x1c033e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb80091a0) at kernel/qobject.cpp:3547
#10 0x00007ff6cff81222 in KJob::result (this=this@entry=0x1c033e0, _t1=_t1@entry=0x1c033e0) at ./kjob.moc:208
#11 0x00007ff6cff81260 in KJob::emitResult (this=0x1c033e0) at ../../kdecore/jobs/kjob.cpp:318
#12 0x00007ff6d0fac46e in QObject::event (this=0x1c033e0, e=<optimized out>) at kernel/qobject.cpp:1195
#13 0x00007ff6cdcf4e9c in QApplicationPrivate::notify_helper (this=this@entry=0x1855000, receiver=receiver@entry=0x1c033e0, e=e@entry=0x1934bd0) at kernel/qapplication.cpp:4562
#14 0x00007ff6cdcf930a in QApplication::notify (this=0x7fffb8009b30, receiver=0x1c033e0, e=0x1934bd0) at kernel/qapplication.cpp:4423
#15 0x00007ff6ce9fdad6 in KApplication::notify (this=0x7fffb8009b30, receiver=0x1c033e0, event=0x1934bd0) at ../../kdeui/kernel/kapplication.cpp:311
#16 0x00007ff6d0f9759e in QCoreApplication::notifyInternal (this=0x7fffb8009b30, receiver=receiver@entry=0x1c033e0, event=event@entry=0x1934bd0) at kernel/qcoreapplication.cpp:915
#17 0x00007ff6d0f9b421 in sendEvent (event=0x1934bd0, receiver=0x1c033e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#18 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x18247a0) at kernel/qcoreapplication.cpp:1539
#19 0x00007ff6d0fc5a93 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#20 postEventSourceDispatch (s=0x1867100) at kernel/qeventdispatcher_glib.cpp:279
#21 0x00007ff6cc761ab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007ff6cc761de8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007ff6cc761ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007ff6d0fc5c26 in QEventDispatcherGlib::processEvents (this=0x1825c90, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#25 0x00007ff6cdd99c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#26 0x00007ff6d0f962ef in QEventLoop::processEvents (this=this@entry=0x7fffb8009ab0, flags=...) at kernel/qeventloop.cpp:149
#27 0x00007ff6d0f96578 in QEventLoop::exec (this=0x7fffb8009ab0, flags=...) at kernel/qeventloop.cpp:204
#28 0x00007ff6d0f9b738 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#29 0x00007ff6cf6bfc13 in Akonadi::ResourceBase::init (r=0x1aad070) at ../../akonadi/resourcebase.cpp:451
#30 0x000000000044c793 in Akonadi::ResourceBase::init<DavGroupwareResource> (argc=<optimized out>, argv=<optimized out>) at /usr/include/akonadi/resourcebase.h:188
#31 0x00007ff6cd27276d in __libc_start_main (main=0x411bf0 <main(int, char**)>, argc=3, ubp_av=0x7fffb8009c48, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffb8009c38) at libc-start.c:226
#32 0x0000000000411c21 in _start ()

Reported using DrKonqi
Comment 1 Grégory Oestreicher 2013-04-11 17:19:29 UTC
It looks like you have an invalid collection. Could you try to re-create the resource?
Comment 2 Simon Andersch 2013-04-12 11:21:16 UTC
Created attachment 78838 [details]
New crash information added by DrKonqi

akonadi_davgroupware_resource (4.10) on KDE Platform 4.10.2 using Qt 4.8.3

As you requested another (hopefully complete) report. Does it fit your needs?

-- Backtrace (Reduced):
#6  0x0000000000442df4 in DavGroupwareResource::retrieveItem (this=0x111b1a0, item=...) at ../../../../resources/dav/resource/davgroupwareresource.cpp:315
#7  0x00007ff730e10f45 in Akonadi::ResourceBasePrivate::slotPrepareItemRetrievalResult (this=0x111b230, job=<optimized out>) at ../../akonadi/resourcebase.cpp:783
#8  0x00007ff730e1137a in Akonadi::ResourceBase::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./moc_resourcebase.cpp:141
[...]
#10 0x00007ff7316cd222 in KJob::result (this=this@entry=0x1735c60, _t1=_t1@entry=0x1735c60) at ./kjob.moc:208
#11 0x00007ff7316cd260 in KJob::emitResult (this=0x1735c60) at ../../kdecore/jobs/kjob.cpp:318
Comment 3 Achim Bohnet 2013-04-12 14:14:41 UTC
This crash (duplicate according to bug report tool) started here after upgrade from
4.10.1 to 4.10.2 on Kubuntu raring (released soon as 13.04).  It happens every time
I start kaddressbook.

_No_ _problem_ with 4.10.2 on Kubuntu 12.10.  Both kubuntu installation use same adressbooks from our OwnCloud  server V4.0.11.


After the crash I see in 'Akonadi Configuration'  that the OwnCloud resource list:
'Ready'
When closing the bug report dialog (dav resource crash) it changes to 
'Fetching Collections 0%
and then it fetches the the 4 calendars from owncloud  and display 'ready' again.

Nevertheless the 'busy icon' (spinning circle of 12 dots) on the left of the 'owncloud'  kaddressbook calender entry is spinning forever like it's tries loading forever.

Achim
Comment 4 Achim Bohnet 2013-04-12 15:10:33 UTC
(In reply to comment #1)
> It looks like you have an invalid collection. Could you try to re-create the
> resource?


yeap.  that workaround works. delete/recreate 'fixed' it.  But is hardly a fix ;-)

Nevertheless it's strange since the addressbooks and calendars are the same since KDE SC 4.9.* times and kaddressbook never had problems before.

1) why did it break after 4.10.1 -> 4.10.2 upgrade on kubuntu 13.04-tobe (uses qt 4.8.4)
2) 4.10.2 still works for me with  Kubuntu 12.10 (used qt 4.8.3) but not for the original bug reporter

Achim
P.S. I really like KDEPIM otherwise I would not spend my time reporting bugs.  Thx for the great tools.
Comment 5 Achim Bohnet 2013-04-19 10:04:22 UTC
delete/create dav resource fix the crash for some time (see #4) , but now the crash on every startup of kadressbook started again.  Drkonqi  informs me backtrace is again a duplicate of this bug report.

Akonadi Config dialog shows all resources as 'Ready'  including the owncloud dav resource.

Kubuntu Raring (soon 13.04):
$ akonadictl --version
Akonadi 1.9.1
$ kaddressbook --version
Qt: 4.8.4
KDE: 4.10.2
Adressbuch: 4.10.2
Comment 6 Achim Bohnet 2013-04-19 11:20:57 UTC
(In reply to comment #5)
Can't reproduce the crash with a newly created user and configuring the same owncloud dav resource.   So something accumulates with the time that makes dav resource crash.

Any hint where I can search for the culprit?
Comment 7 Grégory Oestreicher 2013-04-22 18:57:58 UTC
Git commit a025ba30cfbc1bf1e2baebd0e54cd6355309eb94 by Grégory Oestreicher.
Committed on 22/04/2013 at 20:56.
Pushed by goestreicher into branch 'KDE/4.10'.

Ensure that we have a valid DavUrl
FIXED-IN: 4.10.3

M  +12   -1    resources/dav/resource/davgroupwareresource.cpp

http://commits.kde.org/kdepim-runtime/a025ba30cfbc1bf1e2baebd0e54cd6355309eb94
Comment 8 Jekyll Wu 2013-04-29 12:29:02 UTC
*** Bug 319056 has been marked as a duplicate of this bug. ***
Comment 9 Jessie A. Morris 2013-06-01 16:13:30 UTC
Created attachment 80234 [details]
New crash information added by DrKonqi

akonadi_davgroupware_resource (4.10) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed:

Encountered this problem as well. I'm on 4.10.2 now and am upgrading to 4.10.3 as I type. I'll report back and see if this fixes my problem.

-- Backtrace (Reduced):
#6  0x0000000000445154 in DavGroupwareResource::retrieveItem (this=0x2384610, item=...) at ../../../../resources/dav/resource/davgroupwareresource.cpp:315
[...]
#10 0x00007fed8ee29162 in KJob::result (this=this@entry=0x246cd00, _t1=_t1@entry=0x246cd00) at ./kjob.moc:208
#11 0x00007fed8ee291a0 in KJob::emitResult (this=0x246cd00) at ../../kdecore/jobs/kjob.cpp:318
#12 0x00007fed8fe595be in QObject::event (this=0x246cd00, e=<optimized out>) at kernel/qobject.cpp:1194
#13 0x00007fed8cb9b8ec in QApplicationPrivate::notify_helper (this=this@entry=0x21659f0, receiver=receiver@entry=0x246cd00, e=e@entry=0x23be3b0) at kernel/qapplication.cpp:4567