Ensure that we have a valid DavUrl

BUG: 318176
FIXED-IN: 4.10.3